# infra-mcp

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  glama.json  infra-mcp.yaml.example  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release.yml
src/infra_mcp/: __init__.py  __main__.py  audit.py  cli.py  config.py  db.py  errors.py  runtime.py  schema_cache.py  server.py  setup.py  ssh.py  update_check.py
src/infra_mcp/tools/: __init__.py  db_tools.py  meta_tools.py  ssh_tools.py
tests/: test_bounding.py  test_config_db_ssh.py  test_db_session.py  test_path_allowlist.py  test_schema_cache.py  test_schema_catalog.py  test_sql_guard.py  test_ssh_allowlist.py  test_strip_ansi.py  test_update_check.py  test_update_check_cli.py  test_version.py
